[gd_scene load_steps=5 format=3 uid="uid://dglbm32wv45w2"]

[ext_resource type="Texture2D" uid="uid://b0r0ajsyw25g5" path="res://art/mainMenu.png" id="1_dy36t"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_xw727"]
[ext_resource type="AudioStream" uid="uid://ld5vcpy7abh8" path="res://SFX/mainMenu.mp3" id="3_ya8ig"]
[ext_resource type="PackedScene" path="res://Scenes/scene_transition.tscn" id="4_3616d"]

[node name="Main Menu" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -146.0
offset_top = -87.0
offset_right = 163.0
offset_bottom = 81.0
texture = ExtResource("1_dy36t")
expand_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "ASDASDDSASDSADSDA"
script = ExtResource("1_xw727")

[node name="Gameovertext" type="Label" parent="Control"]
light_mask = 0
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -68.0
offset_right = 168.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
text = "PROYECTO SOL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 26.5
offset_top = -16.5
offset_right = 121.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 0
text = "NEW GAME"

[node name="ExitButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 36.5
offset_top = 25.5
offset_right = 111.5
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 0
text = "EXIT"

[node name="Scene_Transition" parent="Control" instance=ExtResource("4_3616d")]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ya8ig")
autoplay = true
